Day7/declarative-manifest-scripts/after-refactoring/mariadb-deploy.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  labels:
    app: mariadb
  name: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      volumes:
      - name: mariadb-storage
        peristentVolumeClaim:
          claimName: mariadb-pvc-jegan # Replace 'jegan' with your name

      imagePullSecrets:
      - name: docker-pullsecret

      containers:
      - name: mariadb
        image: bitnami/mariadb:latest
        imagePullPolicy: IfNotPresent

        volumeMounts:
        - name: mariadb-storage
          mountPath: /bitnami/mariadb/data
