Day7/declarative-manifest-scripts/after-refactoring/wordpress-deploy.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  labels:
    app: wordpress
  name: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      volumes:
      - name: wordpress-storage
        peristentVolumeClaim:
          claimName: wordpress-pvc-jegan # Replace 'jegan' with your name

      imagePullSecrets:
      - name: docker-pullsecret

      containers:
      - name: wordpress
        image: bitnami/wordpress:latest
        imagePullPolicy: IfNotPresent

        volumeMounts:
        - name: wordpress-storage
          mountPath: /bitnami/wordpress
